# push-or-pay

./: Makefile  README.md  pyproject.toml
src/pushorpay/: checker.py  db.py  main.py  notifier.py  scheduler.py
src/pushorpay/templates/: leaderboard.html  register.html
src/pushorpay/utils/: utils.py
